--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Open+Sans&display=swap");
+
+html {
+	scroll-behavior: smooth;
+}
+
 .header-container {
 	background-image: url("../../assets/img/dtla-blue.jpg");
 	background-position: center;
@@ -7,7 +13,8 @@
 }
 
 .image-skill {
-	width: 180px;
+	width: 160px;
+	margin: 20px;
 }
 
 footer {
@@ -19,4 +26,27 @@ footer {
 /* .card {
 	margin-right: 20px;
 	margin-bottom: 20px;
+} */
+
+.my-pic {
+	width: 100%;
+	height: auto;
+	border-radius: 50%;
+}
+
+.section-header {
+	margin-top: 40px;
+	margin-bottom: 40px;
+	text-align: center;
+}
+
+.big {
+	font-size: 3em;
+	font-family: "Lato", sans-serif;
+	font-weight: bolder;
+}
+
+/* .sticky {
+	top: 20px;
+	position: sticky;
 } */
